--- a/UserInterface/style.css
+++ b/UserInterface/style.css
@@ -66,6 +66,11 @@
   body{
     background-image: url('bg.jpg')
   }
+  .jumbotron{
+  background-color: rgba(0,0,0 .10);  
+ 	backdrop-filter: blur(2px);
+	 box-shadow: 1px 1px 2px black, 0 0 25px lightblue, 0 0 5px black;
+  }
   /* #header{
       height: 90%;
   } */
