--- a/adminInterface/style.css
+++ b/adminInterface/style.css
@@ -62,6 +62,12 @@
       height: 70%;
       width: 80%;
   }
+
+  .jumbotron{
+    background-color: rgba(0,0,0 .10);  
+     backdrop-filter: blur(2px);
+     box-shadow: 1px 1px 2px black, 0 0 25px lightblue, 0 0 5px black;
+    }
   /* #header{
       height: 90%;
   } */
