--- a/adminInterface/style.css
+++ b/adminInterface/style.css
@@ -12,7 +12,7 @@
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: yellowgreen; /* Black*/
+    background-color: rgba(0,0,0, 6); /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -63,10 +63,23 @@
       width: 80%;
   }
 
+  #welcomeDashboard{
+    background-image: url('bg.jpg');
+    background-size: cover;
+  }
+
   .jumbotron{
     background-color: rgba(0,0,0 .10);  
      backdrop-filter: blur(2px);
      box-shadow: 1px 1px 2px black, 0 0 25px lightblue, 0 0 5px black;
+    }
+
+    #headers{
+      background-color:transparent;
+      background-color: rgba(0,0,0 .10);  
+       backdrop-filter: blur(2px);
+      box-shadow: 1px 1px 2px black, 0 0 25px lightblue, 0 0 5px black;
+     
     }
   /* #header{
       height: 90%;
